--- a/0x00-html_advanced/20-index.html
+++ b/0x00-html_advanced/20-index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Latest news - Techium</title>
+    <title>Homepage - Techium</title>
     <meta name="description" content="Techium is a digital agency">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="icon" type="image/png" href="./favicon.png">
@@ -18,7 +18,15 @@
             <span> Techium </span>
           </a>
         </div>
-        <nav></nav>
+        <nav>
+          <a href="/">Home</a>
+          <a href="#services">Services</a>
+          <a href="#works">Works</a>
+          <a href="#about">About</a>
+          <a href="#latest_news">Latest news</a>
+          <a href="#testimonials">Testimonials</a>
+          <a href="#contact">Contact</a>
+        </nav>
       </div>
     </header>
     <br>
