--- a/0x00-html_advanced/13-styleguide.html
+++ b/0x00-html_advanced/13-styleguide.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en"">
+<html dir="ltr" lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Homepage - Techium</title>
-    <meta name="description", content="Techium is a digital agency"/>
-    <link rel="icon" type="image/x-icon" href="./favicon.ico"/>
+    <meta name="description" content="Techium is a digital agency">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
@@ -20,11 +20,15 @@
             <h5>Heading level 5</h5>
             <h6>Heading level 6</h6>
         </section>
-    <section>
-        <header><h2>Paragraph</h2></header>
-        <p>This is my subtitle</p>
-        <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat 	    eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-    </section>
+        <section>
+            <header>
+                <h2>Paragraph</h2>
+            </header>
+            <h2>Heading with a subtitle</h2>
+            <p>This is my subtitle</p>
+            <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
